prevent from conent being clipped

--- a/apps/ftu-ui/src/app/pages/landing-page/landing.component.scss
+++ b/apps/ftu-ui/src/app/pages/landing-page/landing.component.scss
@@ -29,7 +29,7 @@
       display: flex;
       flex-direction: column;
       row-gap: 3.5rem;
-      width: 100%;
+      width: calc(100% - 13.75rem);
       max-width: 46.25rem;
       min-width: 17rem;
       min-height: 34.625rem;
